gitops/infra/onprem/proxy/medfish/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: onprem-proxy
  labels:
    app: prowlarr
spec:
 ports:
  - protocol: TCP
    name: http
    port: 9696
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prowlarr
  namespace: onprem-proxy
subsets: 
- addresses:
  - ip: 10.0.1.3
  ports:
  - port: 9696
