gitops/infra/onprem/proxy/medfish/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: onprem-proxy
spec:
  ingressClassName: nginx-internal
  rules:
  - host: prowlarr.int.konst.fish
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
